changed total stats to avg

--- a/client/partials/dashboard.html
+++ b/client/partials/dashboard.html
@@ -24,10 +24,10 @@
         <p id="stat-winrate">Winrate: -</p>
         <p id="stat-kda">Total K/D/A: -</p>
         <p id="stat-kdaratio">KDA Ratio: -</p>
-        <p id="stat-damage">Total Damage Dealt: -</p>
-        <p id="stat-taken">Total Damage Taken: -</p>
-        <p id="stat-mitigated">Self-Mitigated Damage: -</p>
-        <p id="stat-healing">Total Healing Done: -</p>
+        <p id="stat-damage">Avg Damage Dealt: -</p>
+        <p id="stat-taken">Avg Damage Taken: -</p>
+        <p id="stat-mitigated">Avg Self-Mitigated: -</p>
+        <p id="stat-healing">Avg Healing Done: -</p>
       </div>
 
       <!-- TEMPLATES: -->
